fix album alignment in safari

--- a/res/bootstrap3/less/mediabrowser.less
+++ b/res/bootstrap3/less/mediabrowser.less
@@ -127,7 +127,8 @@
         display: inline-block;
         width: @cover-view-item-width;
         height: @cover-view-item-height;
-        overflow: hidden;
+        vertical-align: middle;
+	overflow: hidden;
         
         &-listview {
             /* overrides normal coverview to display folders as list */
